# WqSat_Get

./: .gitignore  README.md  config_commandLine_example.txt  descarga.txt  estructura.txt  requirements.txt  setup.cfg  setup.py  wqsat_dl.py  wqsat_get.py
notebooks/: Config.ipynb  config.ipynb  sentinel_dl.ipynb  sentinel_get.ipynb
tests/: fix_test_download.patch  test_download.py  test_logging_config.py  test_manager.py  test_search_methods.py  test_sentinel_get.py  test_utils.py
tests/integration/: __init__.py  test_integration_credentials.py  test_integration_download.py
wqsat_dl/: __init__.py  sentinel_dl.py
wqsat_get/: __init__.py  logging_config.py  manager.py  sentinel_get.py  utils.py
