[metadata]
name = WDSat_DL
summary = Python package for downloading satellite images for water quality monitoring.
description-file = 
    README.md
author = Daniel Garcia-Diaz & Fernando Aguilar (IFCA / CSIC)
author-email = (garciad & aguilarf) @ifca.unican.es
version = 0.0.1
license = Apache License 2.0
home-page = https://github.com/garciadd/WQSat-DL
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[files]
packages =
    WDSat_DL