[metadata]
name = wqsat_get
version = 1.0.0
author = Daniel Garcia-Diaz & Fernando Aguilar (IFCA / CSIC)
author-email = (garciad & aguilarf) @ifca.unican.es
summary = Python package for downloading satellite images.
description-file = README.md
license = Apache License 2.0
home-page = https://github.com/garciadd/WqSat_Get
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[files]
packages =
    WqSat_Get